--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 <li>Click the Git.exe in your downloads folder</li>
 <li>Choose the default options. Apart from...
 <img alt="setup" src="getting_started_with_git/images/Untitled.png" /></li>
-<li>Setup configuration with handout</li>
+<li>Setup configuration using the  handout</li>
 </ul></section>
             
           </div>
@@ -410,7 +410,7 @@ command to copy an existing Git repository from the server.</li>
             <section><h2><a href="http://git-scm.com/docs/git-log">git log</a></h2>
 <p>Use git log to view the commits in a repository</p>
 <p><code>git log</code></p>
-<p>Some useful commit options:</p>
+<p>Some useful log options:</p>
 <ul>
 <li><strong><em>-&lt;number&gt; | -n &lt;number&gt;</em></strong> : Limit the number of commits to list</li>
 <li><strong><em>--graph</em></strong> : A text based graph</li>
@@ -748,8 +748,9 @@ command to copy an existing Git repository from the server.</li>
 <p>Use <em>git checkout</em> if you would like to go to a specific revision in your repositories history</p>
 <p>You can checkout a branch</p>
 <p><code>git checkout &lt;branchname&gt;</code>
-<strong><em>Note</em></strong>: This command does two things
-1. Moves the HEAD pointer to the commit the branch last used
+<br />
+<strong><em>Note</em></strong>: This command does two things <br />
+1. Moves the HEAD pointer to the commit the branch last used <br />
 2. Reverted the files in the working directory back to the snapshot the branch points to</p>
 <ul>
 <li>Git keeps a special pointer called HEAD that specifies which branch you are currently on.</li>
@@ -896,7 +897,7 @@ git merge test</code></p>
             <section><ul>
 <li>Create a new branch in your repository called branch1</li>
 <li>Check it out and commit some changes</li>
-<li>Checkout master and create another branch called branch2
+<li>Checkout master and create another branch called branch2 <br />
 <strong><em>Note</em></strong>: Changes in your working directory will have changed</li>
 <li>Check it out and commit some changes</li>
 <li>Merge the two branches into master</li>
